@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-16T01:17:37Z",
+  "timestamp" : "2022-06-16T08:20:41Z",
   "count_outdated" : 335,
   "uniques_outdated" : 189,
   "count" : 363,
-  "uniques" : 208,
+  "uniques" : 209,
   "clones" : [
     {
       "timestamp": "2022-06-02T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-06-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
